--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+label,
+h1,
+p,
+h2,
+a {
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@media print {
+    body {
+        font-size: 12pt;
+    }
+    .contact-item {
+        border: none;
+        padding: 0;
+        margin-bottom: 0;
+    }
+    .no-print {
+        display: none;
+    }
+    li {
+        border: none;
+    }
+    svg,
+    h1 {
+        display: none;
+    }
 }
