--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 label,
-h1,
+
 p,
-h2,
+
 a {
     font-family: "Plus Jakarta Sans", sans-serif;
 }
-
+h1, h2, h3 {
+    font-family: "Playfair Display", serif;
+}
+.container {
+    @apply max-w-[1200px] mx-auto p-4;
+}
 .logo {
     font-family: "Rouge Script", cursive;
     font-weight: 400;
