--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,3 +45,6 @@ h1, h2, h3 {
         display: none;
     }
 }
+.why-havagala {
+    background-image: url('https://images.unsplash.com/photo-1481841580057-e2b9927a05c6?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+}
